# cpp-project-skeletion

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.txt
cmake/: CompilerGNU.cmake  CompilerMSVC.cmake  FeatureCCache.cmake  FeatureClangTidy.cmake  FeaturePrecompiledHeaders.cmake  FeatureUnityBuild.cmake  PackageManagerConan.cmake  PackageManagerVcpkg.cmake  ProjectOptions.cmake  ProjectTemplateConfig.cmake.in  README.md
examples/: CMakeLists.txt
include/project_name/: api.hpp
src/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt
